# rust-wasm-boilerplate

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
public/: index.html  index.js
src/: lib.rs
